update wiki config

--- a/conf/apache/h1ds_staging.conf
+++ b/conf/apache/h1ds_staging.conf
@@ -5,6 +5,8 @@
     WSGIApplicationGroup h1ds-staging
     WSGIPassAuthorization On
     
+    WSGIScriptAlias /wiki /home/dave/.virtualenvs/h1ds_staging/h1ds/conf/apache/moin_staging.wsgi/
+
     WSGIScriptAlias / /home/dave/.virtualenvs/h1ds_staging/h1ds/conf/apache/h1ds_staging.wsgi/
     
     <Location "/">
