fix trac login path in apache conf

--- a/conf/apache/h1ds_staging.conf.template
+++ b/conf/apache/h1ds_staging.conf.template
@@ -14,7 +14,7 @@
         Allow from all
     </Location>
 
-    <Location "/trac/login">
+    <Location "/develop/login">
         AuthType Digest
         AuthName "trac"
 	AuthDigestDomain /develop
