add production files for Trac

--- a/conf/apache/h1ds_production.conf
+++ b/conf/apache/h1ds_production.conf
@@ -6,13 +6,22 @@
     WSGIPassAuthorization On
     
     WSGIScriptAlias /wiki /home/datasys/virtualenvs/h1ds_production/h1ds/conf/apache/moin_production.wsgi/
-
+    WSGIScriptAlias /develop /home/datasys/virtualenvs/h1ds_production/h1ds/conf/apache/trac_production.wsgi/
     WSGIScriptAlias / /home/datasys/virtualenvs/h1ds_production/h1ds/conf/apache/h1ds_production.wsgi/
     
     <Location "/">
         Order Allow,Deny
         Allow from all
     </Location>
+
+    <Location "/develop/login">
+        AuthType Digest
+        AuthName "trac"
+	AuthDigestDomain /develop
+	AuthUserFile /home/datasys/virtualenvs/h1ds_production/trac.htpasswd
+	Require valid-user
+    </Location>
+
     
     <Location "/static">
         SetHandler None
