--- a/settings_staging.py.template
+++ b/settings_staging.py.template
@@ -8,3 +8,13 @@ DATABASES = {
         'NAME': os.path.join(VENV_DIR, 'db', 'h1ds_staging.db')
             }
     }
+
+########################################################################
+## Wiki settings                                                      ##
+########################################################################
+
+WIKI_EDITOR_GROUPS = [u"EditorGroup", ]
+# Include MyUsername with users who should have admin rights
+# in the wiki. Please use CamelCase for all usernames.
+WIKI_SUPERUSERS = [u"MyUsername", ]
+WIKI_ACL_RIGHTS_BEFORE = u"MyUsername:read,write,delete,revert,admin EditorGroup:read,write,delete -All:write,delete,revert,admin"
