remove h1 specific settings. no longer use local_settings.py as other settings files are no longer in repo. refs #1

--- a/settings_production.py.template
+++ b/settings_production.py.template
@@ -2,6 +2,8 @@ from h1ds.settings import *
 
 DEBUG = False
 
+SECRET_KEY = '***ChangeMeToSomethingUnique***'
+
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.sqlite3',
