--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -32,6 +32,7 @@ env.moin_dl_url = "http://static.moinmo.in/files/moin-1.9.3.tar.gz"
 def dev():
     """localhost with django dev server"""
     env.environment = 'development'
+    env.venv = "%(project)s_%(environment)s" %env    
     if platform.linux_distribution()[0] == 'Ubuntu':
         env.mkvirtualenv = "mkvirtualenv --distribute --no-site-packages"
     else:
@@ -44,6 +45,7 @@ def dev():
 def staging():
     """localhost with apache"""
     env.environment = 'staging'
+    env.venv = "%(project)s_%(environment)s" %env    
     env.user = STAGING_USER
     env.hosts = [STAGING_HOST]
     if platform.linux_distribution()[0] == 'Ubuntu':
@@ -60,6 +62,7 @@ def staging():
 def production():
     """server with apache."""
     env.environment = 'production'
+    env.venv = "%(project)s_%(environment)s" %env    
     if platform.linux_distribution()[0] == 'Ubuntu':
         env.mkvirtualenv = "mkvirtualenv --distribute --no-site-packages"
     else:
@@ -75,7 +78,6 @@ def reset_supervisord():
     
     Kill and existing supervisord, then start a new one.
     """
-    env.venv = "%(project)s_%(environment)s" %env    
     with prefix('workon %(venv)s && cdvirtualenv' %env):
         pid_filename = os.path.join("pid", "supervisord.pid")
         if exists(pid_filename):
@@ -87,29 +89,58 @@ def reset_supervisord():
         run('supervisord -c h1ds/conf/celeryd.conf.%(environment)s' %env)
             
 
-def initiate():
-    """To be run once only. Non-idempotent."""
+def update_dir_structure():
+    """Create any missing dirs or files we need. Idempotent."""
 
-    env.venv = "%(project)s_%(environment)s" %env    
-    run('%(mkvirtualenv)s %(venv)s' % env)
+    dirs = (
+        ('wiki', 'data', 'plugin', 'theme'),
+        ('wiki', 'data', 'pages'),
+        ('wiki', 'data', 'user'),
+        ('static',),
+        ('log',),
+        ('db',),
+        ('pid',),
+        ('serverfiles',),
+        )
+    touch = (
+        ('wiki', 'data', 'plugin', '__init__.py'),
+        ('wiki', 'data', 'plugin', 'theme', '__init__.py'),
+        )
 
     with prefix('workon %(venv)s && cdvirtualenv' %env):
         ## Grab the dir so we can use sudo without workon
         env_dir = run('echo $PWD')
-        run('git clone %(git_url)s %(project)s' % env)
-        run('mkdir -p wiki/data/plugin/theme wiki/data/pages wiki/data/user static log db serverfiles')
-        run('touch wiki/data/plugin/__init__.py')
-        run('touch wiki/data/plugin/theme/__init__.py')
-        run('pip install fabric')
+        d_paths = map(lambda x: os.path.join(*x), dirs)
+        t_paths = map(lambda x: os.path.join(*x), touch)
+        for d in d_paths:
+            if not exists(d):
+                run('mkdir -p %s' %d)
+        for t in t_paths:
+            if not exists(t):
+                run('touch %s' %t)
     with cd(env_dir):
         sudo('chmod -R ugo+rwX db')
         sudo('chown -R %(server_user)s:%(server_group)s serverfiles' %env)
+
+def initiate():
+    """To be run once only. Non-idempotent.
+
+    Please avoid making changes to this function, as they will need to be 
+    manually applied to existing projects.
+    """
+
+    run('%(mkvirtualenv)s %(venv)s' % env)
+
+    with prefix('workon %(venv)s && cdvirtualenv' %env):
+        run('git clone %(git_url)s %(project)s' % env)
+        run('pip install fabric')
+    update_dir_structure()
         
 def update():
     """Can be run multiple times. Idempotent."""
 
+    update_dir_structure()
     env.settings = '%(project)s.settings_%(environment)s' % env
-    env.venv = "%(project)s_%(environment)s" %env    
 
     with prefix('workon %(venv)s && cdvirtualenv' %env):
         env_dir = run('echo $PWD')
@@ -158,10 +189,7 @@ def update():
 
     with prefix('workon %(venv)s && cdvirtualenv' %env):
         with prefix('cd %(project)s' %env):
-            if env.environment == 'development':
-                run("./bootstrap.py -d")
-            else:
-                run("./bootstrap.py")
+            run("./bootstrap.py")
             # need server perms to run db through apache, so use sudo to modify db and 
             # make sure we chown the db after to be sure.
             run('./manage.py syncdb --settings=%(settings)s' % env)
