--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -92,6 +92,13 @@ def reset_supervisord():
 def update_dir_structure():
     """Create any missing dirs or files we need. Idempotent."""
 
+    # these dirs, if they exist, need to be changed to user perms
+    # so we can update dir structure without sudo. They are set back 
+    # to server perms when we've finished.
+    server_perms = (
+        ('wiki'),
+        ('serverfiles'),
+        )
     dirs = (
         ('wiki', 'data', 'plugin', 'theme'),
         ('wiki', 'data', 'pages'),
@@ -110,6 +117,13 @@ def update_dir_structure():
     with prefix('workon %(venv)s && cdvirtualenv' %env):
         ## Grab the dir so we can use sudo without workon
         env_dir = run('echo $PWD')
+    with cd(env_dir):
+        server_perm_paths = map(lambda x: os.path.join(*x), server_perms)
+        for sp in server_perm_paths:
+            if exists(sp):
+                sudo('chown -R --reference=$PWD %s' %sp)
+
+    with cd(env_dir):
         d_paths = map(lambda x: os.path.join(*x), dirs)
         t_paths = map(lambda x: os.path.join(*x), touch)
         for d in d_paths:
@@ -118,9 +132,12 @@ def update_dir_structure():
         for t in t_paths:
             if not exists(t):
                 run('touch %s' %t)
+
     with cd(env_dir):
         sudo('chmod -R ugo+rwX db')
-        sudo('chown -R %(server_user)s:%(server_group)s serverfiles' %env)
+        for sp in server_perm_paths:
+            if exists(sp):
+                sudo('chown -R %s:%s %s' %(env.server_user, env.server_group, sp))
 
 def initiate():
     """To be run once only. Non-idempotent.
