--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,8 @@ django==1.3.1
 http://people.physics.anu.edu.au/~dgp112/python-mdsplus/MDSplus-0.5.tgz
 Fabric==1.2.0
 South==0.7.3
-celery==2.4.5
-# django-celery==2.4.1
-# latest django celery has a bug in migrations, checkout the bugfixed version - we'll swap 
-# back stable version when a new one comes out.
+celery==2.2.7
+django-celery==2.2.7
 -e git+git://github.com/ask/django-celery.git@346854806cfd5384453395a97eb676e4d6973d98#egg=djcelery
 django-kombu
 python-openid==2.2.5
