--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+numpy==1.6.1
 supervisor
 django==1.3.1
 http://people.physics.anu.edu.au/~dgp112/python-mdsplus/MDSplus-0.5.tgz
 South==0.7.3
 celery==2.2.7
 django-celery==2.2.7
-django-kombu
+django-kombu==0.9.4
 python-openid==2.2.5
 -e git://github.com/dpretty/django-concurrent-server.git#egg=django_concurrent_server-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/django-openid-auth.git#egg=django_openid_auth-dev
@@ -12,6 +13,5 @@ python-openid==2.2.5
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_core.git#egg=h1ds_core-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_mdsplus.git#egg=h1ds_mdsplus-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_summary.git#egg=h1ds_summary-dev
-numpy==1.6.1
 moin==1.9.2
-matplotlib
+
