--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ python-openid==2.2.5
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_mdsplus.git#egg=h1ds_mdsplus-dev
 -e git+git://code.h1svr.anu.edu.au/h1ds/h1ds_summary.git#egg=h1ds_summary-dev
 moin==1.9.2
+-e git+git://code.h1svr.anu.edu.au/h1.git#egg=h1
 
