set MEDIA_ROOT and MEDIA_URL

--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -108,6 +108,7 @@ def update_dir_structure():
         ('wiki', 'data', 'pages'),
         ('wiki', 'data', 'user'),
         ('static',),
+        ('media',),
         ('log',),
         ('db',),
         ('pid',),
