--- a/conf/apache/h1ds_production.conf.template
+++ b/conf/apache/h1ds_production.conf.template
@@ -17,7 +17,12 @@
         SetHandler None
     </Location>
 
+    <Location "/media">
+        SetHandler None
+    </Location>
+
     Alias /static __venv_dir__/static
+    Alias /media __venv_dir__/media
     
     <Location "/admin-media">
         SetHandler None
