--- a/fabfile.py.template
+++ b/fabfile.py.template
@@ -238,6 +238,8 @@ def update():
             run("./manage.py migrate h1ds_mdsplus --settings=%(settings)s" % env)
             run("./manage.py migrate h1ds_summary --settings=%(settings)s" % env)
             run("./manage.py createtree %(test_mds_dir)s --settings=%(settings)s" % env)
+            run("./manage.py loaddata sphinxdoc_project --settings=%(settings)s" % env)
+            run("./manage.py updatedoc -b h1ds --settings=%(settings)s" % env)
 
     # Now that we  have finished making changes to  the database, change
     # the permissions back to those appropriate for the server.
