change gunicorn user

--- a/gunicorn.sh.template
+++ b/gunicorn.sh.template
@@ -10,6 +10,9 @@ ADDRESS=unix:/tmp/h1ds.gunicorn.sock
 cd __venv_dir__
 source bin/activate
 test -d $LOGDIR || mkdir -p $LOGDIR
+#exec bin/gunicorn h1ds.wsgi:application -w $NUM_WORKERS \
+#    --user=$USER --group=$GROUP --log-level=info --bind=$ADDRESS \
+#    --log-file=$LOGFILE 2>>$LOGFILE
 exec bin/gunicorn h1ds.wsgi:application -w $NUM_WORKERS \
-    --user=$USER --group=$GROUP --log-level=info --bind=$ADDRESS \
+    --log-level=info --bind=$ADDRESS \
     --log-file=$LOGFILE 2>>$LOGFILE
