--- a/conf/supervisord.staging.conf.template
+++ b/conf/supervisord.staging.conf.template
@@ -11,6 +11,13 @@ command = %(here)s/../gunicorn.staging.sh
 stdout_logfile = %(here)s/../../log/gunicorn.out.log
 stderr_logfile = %(here)s/../../log/gunicorn.err.log
 
+[program:moin]
+directory = %(here)s/../
+; user = __user__
+command = %(here)s/../moin.staging.sh
+stdout_logfile = %(here)s/../../log/moin.out.log
+stderr_logfile = %(here)s/../../log/moin.err.log
+
 [program:celery]
 command=%(here)s/../manage.py celeryd -v 2 -B --concurrency=1 --loglevel=INFO --settings=h1ds.settings_staging
 directory=%(here)s/../../
