--- a/conf/supervisord.staging.conf.template
+++ b/conf/supervisord.staging.conf.template
@@ -10,6 +10,7 @@ directory = %(here)s/../
 command = %(here)s/../gunicorn.staging.sh
 stdout_logfile = %(here)s/../../log/gunicorn.out.log
 stderr_logfile = %(here)s/../../log/gunicorn.err.log
+autorestart=true
 
 [program:moin]
 directory = %(here)s/../
@@ -17,6 +18,7 @@ directory = %(here)s/../
 command = %(here)s/../moin.staging.sh
 stdout_logfile = %(here)s/../../log/moin.out.log
 stderr_logfile = %(here)s/../../log/moin.err.log
+autorestart=true
 
 [program:celery]
 command=%(here)s/../manage.py celeryd -v 2 -B --concurrency=1 --loglevel=INFO --settings=h1ds.settings_staging
