--- a/conf/supervisord.staging.conf.template
+++ b/conf/supervisord.staging.conf.template
@@ -33,7 +33,8 @@ startsecs=10
 
 ; Need to wait for currently executing tasks to finish at shutdown.
 ; Increase this if you have very long running tasks.
-stopwaitsecs = 600
+; For staging, let's make things die quickly...
+stopwaitsecs = 10
 
 ; if rabbitmq is supervised, set its priority higher
 ; so it starts first
