--- a/conf/nginx/h1ds_staging.conf.template
+++ b/conf/nginx/h1ds_staging.conf.template
@@ -27,6 +27,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /mdsplus/_/test_stream/ {
+        proxy_buffering off;
+        proxy_pass http://unix:/tmp/h1ds.gunicorn.sock:;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # max time between shots - this looks like ~max supported for nginx                                                                                    
+        proxy_read_timeout 24d;
+
+
     location / {
         proxy_pass http://unix:/tmp/h1ds.gunicorn.sock:;
         proxy_set_header Host $host;
