--- a/conf/nginx/h1ds_staging.conf.template
+++ b/conf/nginx/h1ds_staging.conf.template
@@ -28,7 +28,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /mdsplus/_/test_stream/ {
+    location /mdsplus/_/shot_stream/ {
         proxy_buffering off;
         proxy_pass http://unix:/tmp/h1ds.gunicorn.sock:;
         proxy_set_header Host $host;
