add h1data to nginx conf, yes this should not be hardcoded

--- a/conf/nginx/h1ds_production.conf.template
+++ b/conf/nginx/h1ds_production.conf.template
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name h1ds.anu.edu.au h1svr.anu.edu.au;
+    server_name h1ds.anu.edu.au h1svr.anu.edu.au h1data.anu.edu.au;
     access_log /var/log/nginx/h1ds.access.log;
     error_log /var/log/nginx/h1ds.error.log;
 
