--- a/conf/nginx/h1ds_production.conf.template
+++ b/conf/nginx/h1ds_production.conf.template
@@ -28,7 +28,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /mdsplus/_/shot_stream/ {
+    location /mdsplus/ {
+    	     rewrite ^/mdsplus/(.*)$ /data/$1 break;
+    }
+
+    location /data/_/shot_stream/ {
         proxy_buffering off;
         proxy_pass http://unix:/tmp/h1ds.gunicorn.sock:;
         proxy_set_header Host $host;
