--- a/conf/nginx/h1ds_staging.conf.template
+++ b/conf/nginx/h1ds_staging.conf.template
@@ -5,6 +5,9 @@ server {
     error_log /var/log/nginx/h1ds.error.log;
     rewrite ^/mdsplus/(.*)$ http://h1ds.anu.edu.au/data/$1 permanent;
 
+    pagespeed on;
+    pagespeed FileCachePath /var/ngx_pagespeed_cache;
+
     # enable compression
     gzip on;
     gzip_types text/plain application/xml application/json;
