--- a/conf/nginx/h1ds_staging.conf.template
+++ b/conf/nginx/h1ds_staging.conf.template
@@ -8,6 +8,12 @@ server {
     pagespeed on;
     pagespeed FileCachePath /var/ngx_pagespeed_cache;
 
+    location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" { add_header "" ""; }
+    location ~ "^/ngx_pagespeed_static/" { }
+    location ~ "^/ngx_pagespeed_beacon$" { }
+    location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
+    location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
+
     # enable compression
     gzip on;
     gzip_types text/plain application/xml application/json;
